--- a/info.yaml
+++ b/info.yaml
@@ -11,8 +11,8 @@ project:
     - pwm_gen.v
     - pwm_sync.v
     - k_nn.v
-    - tt_um_wta_pwm.v
-  top_module:  "tt_um_wta_pwm"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
+    - tt_um_jaylennee_wta_pwm.v
+  top_module:  "tt_um_jaylennee_wta_pwm"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
 # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x2"    # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2 or 8x2
